# FactoryHub_Mirror

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  myBuild.sh
.github/workflows/: pain_au_chocolat.yml
Shader/Sprite/: fragment.glsl  vertex.glsl
fmod_studio_api/api/fsbank/lib/x86/: libfsbank.so.13.12  libfsbankL.so.13.12
fmod_studio_api/api/fsbank/lib/x86_64/: libfsbank.so.13.12
fmod_studio_api/api/studio/lib/arm/: libfmodstudio.so.13.12  libfmodstudioL.so.13.12
fmod_studio_api/api/studio/lib/arm64/: libfmodstudio.so.13.12  (+1 more)
fmod_studio_api/doc/: revision.txt
include/Blocks/: Direction.hpp  IBlock.hpp
include/Entity/: AEntity.hpp  IEntity.hpp
include/ITurret/: ITurret.hpp
include/Map/: Generation.hpp  Perlin.hpp
include/Renderer/: Error.hpp  Sdf.hpp
include/glad/: glad.h
include/items/: ARessource.hpp  IBlock.hpp  IItem.hpp  amunition.hpp  item.hpp  ressource.hpp
src/: CMakeLists.txt  main.cpp
src/Blocks/: AVein.cpp  AVein.hpp
src/Blocks/Builds/: ABuilds.cpp  ABuilds.hpp  ATapis.cpp
src/Entity/: AEntity.cpp
src/Game/: GameWindow.cpp  MenuWindow.cpp  WindowsManager.cpp  WindowsManager.hpp
src/Game/Blocks/: AVein.cpp
src/Game/Blocks/Builds/: ABuilds.cpp  ABuilds.hpp  AMiner.cpp  AMiner.hpp  ATapis.cpp  Base.cpp  Base.hpp  MinerT1.cpp  MinerT1.hpp  Unlockable.cpp  Unlockable.hpp
src/Game/Blocks/Builds/Factory/: AFactory.cpp  AFactory.hpp  Advanced_Assembly_Workshop.cpp  Advanced_Assembly_Workshop.hpp  Advanced_Smelter.cpp  Advanced_Smelter.hpp  Arthuryan_Module.cpp  Arthuryan_Module.hpp  Assembly_Workshop.cpp  Assembly_Workshop.hpp  Capacitor_Factory.cpp  Capacitor_Factory.hpp  Chemical_Plant.cpp  Chemical_Plant.hpp  Cutting_Machine.cpp  Cutting_Machine.hpp  Foundry.cpp  Foundry.hpp  High_Voltage_Generator.cpp  High_Voltage_Generator.hpp  Molding_Workshop.cpp  Molding_Workshop.hpp  Nuclear_Refinery.cpp  Nuclear_Refinery.hpp  Smelter.cpp  Smelter.hpp  Wiring_Factory.cpp  Wiring_Factory.hpp
src/Game/Blocks/Builds/Spawner/: ASpawner.cpp  ASpawner.hpp
src/Game/Blocks/Builds/Tapis/: ATapis.cpp  ATapis.hpp  Tapis.cpp  Tapis.hpp
src/Game/Blocks/Builds/TurretAlly/: ATurretAlly.cpp  ATurretAlly.hpp
src/Game/Blocks/Terrain/: ATerrain.cpp  ATerrain.hpp  Stone.cpp  Stone.hpp
src/Game/Blocks/Vein/: AVein.cpp  AVein.hpp  Acier.hpp  Charbon.hpp  Cuivre.hpp  Eau.hpp  Salpetre.hpp  Uranium.hpp  Zinc.hpp
src/Game/Entity/: AEntity.cpp  AEntity.hpp
src/Game/Entity/Enemy/: AEnemy.cpp  AEnemy.hpp  Enemy_Hth.cpp  Enemy_Hth.hpp
src/Game/Entity/Projectile/: AProjectile.cpp  AProjectile.hpp
src/Game/ITurret/: ATurret.cpp  ATurret.hpp
src/Game/Items/: Item.cpp  Item.hpp
src/Game/Map/: BuilderManager.cpp  BuilderManager.hpp  Generation.cpp  MapGrid.cpp  MapGrid.hpp  Perlin.cpp
src/Game/Sound/: Sound.cpp  Sound.hpp
src/Game/Windows/: GameWindow.cpp  HelpWindow.cpp  MenuWindow.cpp  PauseWindow.cpp  WindowsManager.cpp  WindowsManager.hpp
src/Glad/: glad.c
src/ITurret/: ATurret.hpp
src/Map/: MapGrid.cpp
src/Renderer/: Camera.cpp  Camera.hpp  Error.cpp  GetterTextures.cpp  GetterTextures.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  UISprite.cpp  UISprite.hpp  Window.cpp  Window.hpp
src/items/: AAmunition.cpp  AAmunition.hpp  ARessource.cpp  ARessource.hpp  Item.cpp  Item.hpp  amunation.hpp  amunition.cpp  amunition.hpp
src/map/: MapGrid.cpp  MapGrid.hpp  map_grid.cpp  map_grid.hpp
submodules/: CMakeLists.txt
(+2 files in other folders)
